--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.3",
+        "stevebauman/location": "^6.5",
         "twilio/sdk": "^6.32"
     },
     "require-dev": {
