--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.3",
+        "spatie/laravel-permission": "^5.5",
         "stevebauman/location": "^6.5",
         "twilio/sdk": "^6.32"
     },
