--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "axlon/laravel-postal-code-validation": "^3.3",
+        "barryvdh/laravel-dompdf": "^2.0",
         "captcha-com/laravel-captcha": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
